// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemSection snapshot should match snapshot 1`] = `
<ListItemSection>
  <div>
    Test
  </div>
</ListItemSection>
`;

exports[`ListItemSection snapshot should match snapshot with className 1`] = `
<ListItemSection
  className="example-class"
>
  <div
    className="example-class"
  >
    Test
  </div>
</ListItemSection>
`;

exports[`ListItemSection snapshot should match snapshot with id 1`] = `
<ListItemSection
  id="example-id"
>
  <div
    id="example-id"
  >
    Test
  </div>
</ListItemSection>
`;

exports[`ListItemSection snapshot should match snapshot with position 1`] = `
<ListItemSection
  position="end"
>
  <div
    data-position="end"
  >
    Test
  </div>
</ListItemSection>
`;

exports[`ListItemSection snapshot should match snapshot with style 1`] = `
<ListItemSection
  style={
    Object {
      "color": "pink",
    }
  }
>
  <div
    style={
      Object {
        "color": "pink",
      }
    }
  >
    Test
  </div>
</ListItemSection>
`;
